--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "serve-test": "node serve-test-page.js"
   },
   "dependencies": {
     "express": "^4.18.2",
