--- a/env.example
+++ b/env.example
@@ -35,7 +35,12 @@ FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
 # ===========================================
 # CONFIGURAÇÕES ADICIONAIS
 # ===========================================
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+# Origens permitidas para CORS (separadas por vírgula)
+# Em produção, inclua todas as URLs do frontend
+CORS_ORIGINS=https://zyra.g2telecom.com,https://zyra-front-eta.vercel.app
+# Em desenvolvimento:
+# CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:10000
+
 LOG_LEVEL=info
 REQUEST_TIMEOUT=30000
 MAX_BODY_SIZE=10485760
